--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Roxy by GetTemplates.co</title>
+    <title>Mako's portfolio</title>
     <meta name="description" content="Roxy">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -31,7 +31,7 @@
 	<nav id="header-navbar" class="navbar navbar-expand-lg py-4">
     <div class="container">
         <a class="navbar-brand d-flex align-items-center text-white" href="/">
-            <h3 class="font-weight-bolder mb-0">MAKO</h3>
+            <h3 class="font-weight-bolder mb-0">MAKO's PORTFOLIO</h3>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-nav-header" aria-controls="navbar-nav-header" aria-expanded="false" aria-label="Toggle navigation">
             <span class="lnr lnr-menu"></span>
@@ -231,20 +231,19 @@
                                 </div>
                                 <div class="blog-text">
                                     <div class="blog-tag">
-                                        <a href="https://drive.google.com/drive/folders/1DA5gxqxbux-0aPN9sapL7yaACReG0cWg?usp=sharing"><h6><small>ECONOMY</small></h6></a>
+                                        <a href="https://drive.google.com/drive/folders/1DA5gxqxbux-0aPN9sapL7yaACReG0cWg?usp=sharing"><h6><small>TECHNOLOGY</small></h6></a>
                                     </div>
                                     <div class="blog-title">
-                                        <a href="https://drive.google.com/drive/folders/1DA5gxqxbux-0aPN9sapL7yaACReG0cWg?usp=sharing"><h4>Amazing Project</h4></a>
+                                        <a href="https://drive.google.com/drive/folders/1DA5gxqxbux-0aPN9sapL7yaACReG0cWg?usp=sharing"><h4>Tech Reports</h4></a>
                                     </div>
                                     <div class="blog-meta">
-                                        <p class="blog-date">30 May 2016</p> /
-                                        <p class="blog-comment"><a href="">23 Comments</a></p>
+                                        <p class="blog-date">1 Sept 2023</p>
                                     </div>
                                     <div class="blog-desc">
-                                        <p>Lorem ipsum dolor sit amet con sectetur adipiscing elit sed do eiu smod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                        <p>I have written privcy-preserving blockchain whitepaper, product description of an AI-driven othello game, and more.</p>
                                     </div>
                                     <div class="blog-author">
-                                        <p>by John Doe</p>
+                                        <p>by Mako Ohara</p>
                                     </div>
                                 </div>
                             </div>
