--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<nav id="header-navbar" class="navbar navbar-expand-lg py-4">
     <div class="container">
         <a class="navbar-brand d-flex align-items-center text-white" href="/">
-            <h3 class="font-weight-bolder mb-0">MAKO's PORTFOLIO</h3>
+            <h3 class="font-weight-bolder mb-0">PORTFOLIO</h3>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-nav-header" aria-controls="navbar-nav-header" aria-expanded="false" aria-label="Toggle navigation">
             <span class="lnr lnr-menu"></span>
@@ -86,8 +86,7 @@
         <div class="section-content">
             <div class="title-wrap" data-aos="fade-up">
                 <h2 class="section-title"> <b> About Me</b></h2>
-                <p class="section-sub-title">Throughout university years, I focused on realizing ideas that cope with rapidly changing world. In the 6 projects, I researcehd AI tools, <br> ideated, wrote compelling proposals, managed, and wrote thousands of lines of code.
-                    .</p>
+                <p class="section-sub-title">I build things. I am interested in dynamic art and mixing AI and data with life through HCI and emotions. I also work on educational digital penetration projects for remote locations. Some things here are school work and some are personal projects.</p>
             </div>
 
             <div class="row">
@@ -100,7 +99,7 @@
 
                         <div class="col-md-4 offset-md-right-2 col-sm-6" data-aos="fade-left">
                             <h4 class="mb-4">Work Sample</h4>
-                            <p>Many of my work are not publishable as I sold them and do not own them anymore. Here are some work from non-commited projects, school works, and writing samples. If you want to check out my code, please checkout Github!</p>
+                            <p>Many of my work are private, but here are some publishable works from personal projects, school works, and writing samples. Please see below for work samples!</p>
                             <!--
                             <div class="progress mb-3">
                                 <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">HTML5 95%</div>
@@ -126,7 +125,7 @@
                 <div class="col-md-12">
                     <!-- Section Title -->
                     <div class="title-wrap mb-5">
-                        <h2>Who loved to <span> work</span> with me</h2>
+                        <h2>Past <span>Experiences</span></h2>
                     </div>
                     <!-- End of Section Title -->
                 </div>
@@ -179,19 +178,19 @@
                                 </div>
                                 <div class="blog-text">
                                     <div class="blog-tag">
-                                        <a href="https://github.com/makoohara?tab=repositories"><h6><small>CODE</small></h6></a>
+                                        <a href="https://github.com/makoohara"><h6><small>WORK SAMPLES</small></h6></a>
                                     </div>
                                     <div class="blog-title">
-                                        <a href="https://github.com/makoohara?tab=repositories"><h4>Github</h4></a>
+                                        <a href="https://github.com/makoohara"><h4>Github</h4></a>
                                     </div>
                                     <div class="blog-meta">
-                                        <p class="update-date">1 Sept 2023</p>
+                                        <p class="update-date">2 Apr 2024</p>
                                     </div>
                                     <div class="blog-desc">
-                                        <p>Check my github out for my coding work! It includes Bayesian modeling, AI, and simulation implementation. I also worked for wrapper and docker development at a company but this is not public.</p>
+                                        <p>AI implementation, simulation, Bayesian modeling, and some private projects.</p>
                                     </div>
                                     <div class="blog-author">
-                                        <p>by Mako Ohara</p>
+                                        <p>Mako Ohara</p>
                                     </div>
                                 </div>
                             </div>
@@ -211,13 +210,13 @@
                                         <a href="https://drive.google.com/drive/folders/1V61GCySdBOYg8ztytBmcY1wMm2KJMace?usp=sharing"><h4>Work Samples</h4></a>
                                     </div>
                                     <div class="blog-meta">
-                                        <p class="blog-date">1 Sept 2023</p> /
+                                        <p class="blog-date">2 Apr 2024</p> /
                                     </div>
                                     <div class="blog-desc">
-                                        <p>Check out some of my philosophical and economic exploration in existentialism, global development, and much more!</p>
+                                        <p>Existentialism, Global Development, and much more!</p>
                                     </div>
                                     <div class="blog-author">
-                                        <p>by Mako Ohara</p>
+                                        <p>Mako Ohara</p>
                                     </div>
                                 </div>
                             </div>
@@ -231,19 +230,19 @@
                                 </div>
                                 <div class="blog-text">
                                     <div class="blog-tag">
-                                        <a href="https://drive.google.com/drive/folders/1DA5gxqxbux-0aPN9sapL7yaACReG0cWg?usp=sharing"><h6><small>TECHNOLOGY</small></h6></a>
+                                        <a href="https://drive.google.com/drive/folders/1DA5gxqxbux-0aPN9sapL7yaACReG0cWg?usp=sharing"><h6><small>TECH RESEARCH</small></h6></a>
                                     </div>
                                     <div class="blog-title">
-                                        <a href="https://drive.google.com/drive/folders/1DA5gxqxbux-0aPN9sapL7yaACReG0cWg?usp=sharing"><h4>Tech Reports</h4></a>
+                                        <a href="https://drive.google.com/drive/folders/1DA5gxqxbux-0aPN9sapL7yaACReG0cWg?usp=sharing"><h4>Technical Reports</h4></a>
                                     </div>
                                     <div class="blog-meta">
-                                        <p class="blog-date">1 Sept 2023</p>
+                                        <p class="blog-date">2 Apr 2024</p>
                                     </div>
                                     <div class="blog-desc">
-                                        <p>I have written privcy-preserving blockchain whitepaper, product description of an AI-driven othello game, and more.</p>
+                                        <p>privcy-preserving blockchain whitepaper, product description of an AI-driven othello game, and more.</p>
                                     </div>
                                     <div class="blog-author">
-                                        <p>by Mako Ohara</p>
+                                        <p>Mako Ohara</p>
                                     </div>
                                 </div>
                             </div>
@@ -303,7 +302,7 @@
                 <div class="col-md-3" data-aos="fade-up">
                     <span class="lnr lnr-location fs-40 py-4 d-block"></span>
                     <h5>LOCATION</h5>
-                    <p>Taipei (until December 2023), London (early 2024)</p>
+                    <p>London, San Francisco, Tokyo</p>
                 </div>
                 <div class="col-md-3" data-aos="fade-up" data-aos-delay="200">
                     <span class="lnr lnr-clock fs-40 py-4 d-block"></span>
@@ -321,11 +320,8 @@
         </div>
     </div>
 </section>
-<!-- End of Client Section -->	<!-- Reservation Section -->
-
-<!-- End of Reservation Section -->	<!-- Features Section-->
-
-<!-- End of Features Section--></div>
+<!-- End of Client Section -->	
+</div>
 <footer class="mastfoot my-3">
     <div class="inner container">
          <div class="row">
@@ -338,15 +334,6 @@
            
             <div class="col-lg-4 col-md-12">
             	<nav class="nav nav-mastfoot justify-content-center">
-	                <a class="nav-link" href="https://www.facebook.com/profile.php?id=100010574464603">
-	                	<i class="fab fa-facebook-f"></i>
-	                </a>
-	                <a class="nav-link" href="https://twitter.com/4feit1">
-	                	<i class="fab fa-twitter"></i>
-	                </a>
-	                <a class="nav-link" href="https://www.instagram.com/oha_may/">
-	                	<i class="fab fa-instagram"></i>
-	                </a>
 	                <a class="nav-link" href="https://www.linkedin.com/in/mako-ohara-893ab3204/">
 	                	<i class="fab fa-linkedin"></i>
 	                </a>
