--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <div class="container">
         <div class="section-content">
             <div class="title-wrap mb-5" data-aos="fade-up">
-                <h2 class="section-title"><b>projects</b></h2>
+                <h2 class="section-title"><b>Work Samples</b></h2>
                 <p class="section-sub-title">
                 I'm passionate about technology and its impact.     
                 </p>
@@ -178,7 +178,7 @@
                                 </div>
                                 <div class="blog-text">
                                     <div class="blog-tag">
-                                        <a href="https://github.com/makoohara"><h6><small>WORK SAMPLES</small></h6></a>
+                                        <a href="https://github.com/makoohara"><h6><small>CODING SAMPLES</small></h6></a>
                                     </div>
                                     <div class="blog-title">
                                         <a href="https://github.com/makoohara"><h4>Github</h4></a>
@@ -207,7 +207,7 @@
                                         <a href="https://drive.google.com/drive/folders/1V61GCySdBOYg8ztytBmcY1wMm2KJMace?usp=sharing"><h6><small>Economics and Philosophy</small></h6></a>
                                     </div>
                                     <div class="blog-title">
-                                        <a href="https://drive.google.com/drive/folders/1V61GCySdBOYg8ztytBmcY1wMm2KJMace?usp=sharing"><h4>Work Samples</h4></a>
+                                        <a href="https://drive.google.com/drive/folders/1V61GCySdBOYg8ztytBmcY1wMm2KJMace?usp=sharing"><h4>Writing Samples</h4></a>
                                     </div>
                                     <div class="blog-meta">
                                         <p class="blog-date">2 Apr 2024</p> /
@@ -299,18 +299,18 @@
         <div class="section-content pt-0">
 
             <div class="row text-center mt-4">
-                <div class="col-md-3" data-aos="fade-up">
+                <div class="col-md-4" data-aos="fade-up">
                     <span class="lnr lnr-location fs-40 py-4 d-block"></span>
                     <h5>LOCATION</h5>
                     <p>London, San Francisco, Tokyo</p>
                 </div>
-                <div class="col-md-3" data-aos="fade-up" data-aos-delay="200">
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
                     <span class="lnr lnr-clock fs-40 py-4 d-block"></span>
                     <h5>WORKING TIME</h5>
                     <p>Monday - Friday</p>
                 </div>
 
-                <div class="col-md-3" data-aos="fade-up" data-aos-delay="600">
+                <div class="col-md-4" data-aos="fade-up" data-aos-delay="600">
                     <span class="lnr lnr-phone fs-40 py-4 d-block"></span>
                     <h5>EMAIL</h5>
                     <p>mako1126blue@gmail.com</p>
